--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,11 +1,16 @@
+# DNS Tic-Tac-Toe Frontend Environment Variables
+# Copy this file to .env.local and update the values as needed
+
 # DNS Server Configuration
-# The host where the Go DNS server is running
-DNS_HOST=127.0.0.1
+# DNS server hostname or IP address
+# Leave empty to use default DNS resolver, or set to your DNS server address
+# Examples: "127.0.0.1" (localhost), "188.188.188.188" (remote server)
+NEXT_PUBLIC_DNS_HOST=127.0.0.1
 
-# The port where the Go DNS server is listening
-# Use 53 for standard DNS (requires root/sudo)
-# Use 5353 for non-privileged port
-DNS_PORT=53
+# DNS server port (optional, only needed if not using default port 53)
+# Must match DNS_PORT in backend if you're running on a non-standard port
+NEXT_PUBLIC_DNS_PORT=53
 
-# The DNS zone/domain used by the game
-DNS_ZONE=game.local
+# DNS zone name (must match DNS_ZONE in backend)
+# Examples: "game.local" (local development)
+NEXT_PUBLIC_DNS_ZONE=game.local
